--- a/mobile/src/app/components/profil-event/profil-event.component.scss
+++ b/mobile/src/app/components/profil-event/profil-event.component.scss
@@ -47,7 +47,7 @@ ion-toolbar {
     }
 }
 
-p, label {
+p, label, a {
     color: black;
 }
 
@@ -58,6 +58,7 @@ label {
 .horizontal-align {
     display: flex;
     align-items: center;
+    text-decoration: none;
 }
 
 #flex-item-1 {
