--- a/mobile/src/app/tab3/tab3.page.scss
+++ b/mobile/src/app/tab3/tab3.page.scss
@@ -49,7 +49,7 @@ h1 {
     }
 }
 
-p, label {
+p, label, a {
     color: black;
 }
 
@@ -60,6 +60,7 @@ label {
 .horizontal-align {
     display: flex;
     align-items: center;
+    text-decoration: none;
 }
 
 #flex-item-1 {
