add photo user de base

--- a/mobile/src/app/components/profil-event/profil-event.component.html
+++ b/mobile/src/app/components/profil-event/profil-event.component.html
@@ -11,6 +11,7 @@
     <ion-card-header id="photoProfil">
       <div class="img-box">
         <!-- <img src="../../assets/profil/"> -->
+        <img src="../../../assets/icon/user.png">
       </div> 
       <ion-card-title>{{profil?.firstName}} {{profil?.name}}</ion-card-title>
       <ion-card-subtitle>&#64;{{profil?.idProfil}}</ion-card-subtitle>
