Ajout de l'id et username pour le profil

--- a/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
+++ b/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
@@ -16,7 +16,7 @@
             labelPlacement="stacked"
             [clearInput]="true"
             placeholder="ex: lebgdubat57"
-            [(ngModel)]="userData.idProfil"
+            [(ngModel)]="userData.username"
           >
           <ion-icon slot="start" name="at-outline" aria-hidden="true"></ion-icon>
           </ion-input>
