--- a/mobile/src/app/pages/login/login.page.html
+++ b/mobile/src/app/pages/login/login.page.html
@@ -16,7 +16,7 @@
             <div padding>
               <ion-item>
                 <ion-label position="floating">Nom d'utilisateur</ion-label>
-                <ion-input name="idProfil" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
+                <ion-input name="username" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Mot de passe</ion-label>
