--- a/mobile/src/app/pages/register/register.page.html
+++ b/mobile/src/app/pages/register/register.page.html
@@ -17,7 +17,7 @@
 
               <ion-item>
                 <ion-label position="floating">Nom d'utilisateur</ion-label>
-                <ion-input name="idProfil" type="text" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
+                <ion-input name="username" type="text" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
