--- a/mobile/src/app/tab3/tab3.page.html
+++ b/mobile/src/app/tab3/tab3.page.html
@@ -19,7 +19,7 @@
         <img src="../../assets/icon/user.png">
       </div> 
       <ion-card-title>{{profil?.firstName}} {{profil?.name}}</ion-card-title>
-      <ion-card-subtitle>&#64;{{profil?.idProfil}}</ion-card-subtitle>
+      <ion-card-subtitle>&#64;{{profil?.username}}</ion-card-subtitle>
     </ion-card-header>
   
     <ion-card-content>
