--- a/mobile/src/app/components/update-event/update-event.component.html
+++ b/mobile/src/app/components/update-event/update-event.component.html
@@ -22,7 +22,9 @@
     <ion-label position="stacked">Date et Heure</ion-label>
     <ion-datetime 
       displayFormat="YYYY-MM-DD HH:mm" 
-      pickerFormat="YYYY-MM-DDTHH:mmZ" 
+      pickerFormat="YYYY-MM-DDTHH:mmZ"
+      max="{{ maxDate }}"
+      min="{{ minDate }}"
       [(ngModel)]="eventDateTime"
       (ionChange)="onDateTimeChange($event)"
     ></ion-datetime>
