--- a/mobile/src/app/tab2/tab2.page.html
+++ b/mobile/src/app/tab2/tab2.page.html
@@ -27,6 +27,8 @@
     <ion-datetime 
       displayFormat="YYYY-MM-DD HH:mm" 
       pickerFormat="YYYY-MM-DDTHH:mmZ" 
+      min="{{ minDate }}"
+      max="{{ maxDate }}"
       [(ngModel)]="eventDateTime"
       (ionChange)="onDateTimeChange($event)"
     ></ion-datetime>
