--- a/mobile/src/app/pages/login/login.page.html
+++ b/mobile/src/app/pages/login/login.page.html
@@ -15,12 +15,10 @@
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
             <div padding>
               <ion-item>
-                <ion-label position="floating">Nom d'utilisateur</ion-label>
-                <ion-input name="username" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
+                <ion-input label="Nom d'utilisateur" labelPlacement="floating" name="username" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
               </ion-item>
               <ion-item>
-                <ion-label position="floating">Mot de passe</ion-label>
-                <ion-input name="password" type="password" placeholder="Votre mot de passe" ngModel required></ion-input>
+                <ion-input label="Mot de passe" labelPlacement="floating" name="password" type="password" placeholder="Votre mot de passe" ngModel required></ion-input>
               </ion-item>
             </div>
             <br>
