Ajout limitation du nombre de lits possibles lors de la création ou la modification d'un event

--- a/mobile/src/app/components/update-event/update-event.component.html
+++ b/mobile/src/app/components/update-event/update-event.component.html
@@ -51,6 +51,10 @@
       >
       </ion-input>
     </ion-item>
+
+    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+    <br>
+
   </ion-list>
   <ion-button id="eventButton" (click)="updateEvent()">Modifier mon événement</ion-button>
 </ion-content>
