--- a/mobile/src/app/components/update-event/update-event.component.scss
+++ b/mobile/src/app/components/update-event/update-event.component.scss
@@ -26,5 +26,9 @@ ion-toolbar {
   height: auto;
   margin-left: 5%;
 }
-  
-  
+
+.error-message{
+  color: red;
+  margin-left: 15px;
+  font-size: 10px;
+}
