--- a/mobile/src/app/tab2/tab2.page.html
+++ b/mobile/src/app/tab2/tab2.page.html
@@ -57,6 +57,9 @@
     </ion-input>
   </ion-item>
 
+  <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+  <br>
+
   </ion-list>
   <ion-button id="eventButton" (click)="creationEvent()">Créer mon événement</ion-button>
 </ion-content>
