--- a/mobile/src/app/tab2/tab2.page.scss
+++ b/mobile/src/app/tab2/tab2.page.scss
@@ -46,3 +46,9 @@ ion-list {
 ion-item {
     --border-color: #ddd; 
 }
+
+.error-message{
+    color: red;
+    margin-left: 15px;
+    font-size: 10px;
+}
