Ajout de l'événement à la page d'accueil dès qu'il à été créé

--- a/mobile/src/app/components/update-event/update-event.component.html
+++ b/mobile/src/app/components/update-event/update-event.component.html
@@ -43,7 +43,8 @@
 
     <ion-item *ngIf="event">
       <ion-input
-        label="Lit(s) disponible(s)"
+        type="number"
+        label="Nombre de lits disponibles"
         labelPlacement="floating"
         [clearInput]="false"
         placeholder={{event?.nbrLit}}
