--- a/mobile/src/app/components/menu/menu/menu.component.html
+++ b/mobile/src/app/components/menu/menu/menu.component.html
@@ -16,9 +16,15 @@
         </ion-button>
       </ion-item>
 
-      <ion-item [routerLink]="['/tabs/tab5']">
-        <ion-button menuToggle expand="full" color="primary">
+      <ion-item>
+        <ion-button menuToggle expand="full" color="primary" [routerLink]="['/tabs/tab5']">
           <ion-label color="dark">Anciens Évènements</ion-label>
+        </ion-button>
+      </ion-item>
+
+      <ion-item>
+        <ion-button expand="full" color="primary" [routerLink]="['/update-profil']">
+          <ion-label color="dark">Modifier mon profil</ion-label>
         </ion-button>
       </ion-item>
 
