--- a/mobile/src/app/components/update-profil/update-profil.component.html
+++ b/mobile/src/app/components/update-profil/update-profil.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Modification du compte</ion-title>
+    <ion-title>Modifier mon profil</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -13,7 +13,7 @@
          <ion-item>
             <ion-input
             label="Nom d'utilisateur"
-            labelPlacement="stacked"
+            labelPlacement="floating"
             [clearInput]="true"
             placeholder={{profil?.username}}
             [(ngModel)]="profil.username"
@@ -26,7 +26,7 @@
           <ion-item>
             <ion-input
             label="Mot de passe"
-            labelPlacement="stacked"
+            labelPlacement="floating"
             [clearInput]="true"
             placeholder={{profil?.password}}
             [(ngModel)]="profil.password"
@@ -39,7 +39,7 @@
           <ion-item>
             <ion-input
             label="Nom"
-            labelPlacement="stacked"
+            labelPlacement="floating"
             [clearInput]="true"
             placeholder={{profil?.name}}
             [(ngModel)]="profil.name"
@@ -50,7 +50,7 @@
           <ion-item>
             <ion-input
         label="Prénom"
-        labelPlacement="stacked"
+        labelPlacement="floating"
         [clearInput]="true"
         placeholder={{profil?.firstName}}
         [(ngModel)]="profil.firstName"
@@ -60,7 +60,7 @@
           <ion-item>
             <ion-input
         label="Adresse"
-        labelPlacement="stacked"
+        labelPlacement="floating"
         [clearInput]="true"
         placeholder={{profil?.address}}
         [(ngModel)]="profil.address"
@@ -69,18 +69,22 @@
 
           <ion-item>
             <ion-input
+        type="email"
         label="Mail"
-        labelPlacement="stacked"
+        labelPlacement="floating"
+        fill="solid"
         [clearInput]="true"
+        helperText=" "
         placeholder={{profil?.mail}}
         [(ngModel)]="profil.mail"
+        email
         ></ion-input>
           </ion-item>
 
           <ion-item>
             <ion-input
         label="Telephone"
-        labelPlacement="stacked"
+        labelPlacement="floating"
         [clearInput]="true"
         placeholder={{profil?.numberPhone}}
         [(ngModel)]="profil.numberPhone"
@@ -90,7 +94,7 @@
           <ion-item>
             <ion-input
             label="Instagram"
-            labelPlacement="stacked"
+            labelPlacement="floating"
             [clearInput]="true"
             placeholder={{profil?.instagram}}
             [(ngModel)]="profil.instagram"
@@ -100,7 +104,7 @@
           <ion-item>
             <ion-input
         label="Facebook"
-        labelPlacement="stacked"
+        labelPlacement="floating"
         [clearInput]="true"
         placeholder={{profil?.facebook}}
         [(ngModel)]="profil.facebook"
@@ -110,22 +114,18 @@
           <ion-item>
             <ion-input
         label="Description"
-        labelPlacement="stacked"
+        labelPlacement="floating"
         [clearInput]="true"
         placeholder={{profil?.description}}
         [(ngModel)]="profil.description"
         ></ion-input>
           </ion-item>
 
-
         </ion-list>
       </ion-card-header>
 
       <ion-card-content>
-        <ion-button shape="round" size="small" (click)="UpdateProfil()">
-          Je souscris à un abonnement
-          <ion-icon name="send-outline"></ion-icon>  
-        </ion-button>
+        <ion-button id="userButton" (click)="updateProfil()">Modifier mon profil</ion-button>
       </ion-card-content>
 
   </ion-card>
