Ajout des champs required pour la création d'event

--- a/mobile/src/app/components/update-event/update-event.component.html
+++ b/mobile/src/app/components/update-event/update-event.component.html
@@ -57,6 +57,6 @@
     <br>
 
   </ion-list>
-  <ion-button id="eventButton" (click)="updateEvent()">Modifier mon événement</ion-button>
+  <ion-button id="eventButton" (click)="updateEvent()" [disabled]="event.nom === '' || event.lieu === '' || isNumAndPositive(event.nbrLit) || event.nbrLit === null">Modifier mon événement</ion-button>
 </ion-content>
 
