--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -45,7 +45,7 @@
     <ion-button [routerLink]="['/update-event',event?.id]">
       <ion-icon aria-hidden="true" name="pencil-outline" style="height: 35px; width:150px; color: black;"></ion-icon>
     </ion-button>
-    <ion-button (click)="sShare()">Partager sur Instagram</ion-button>
+    <ion-button (click)="sShare()"><ion-icon name="share-outline"></ion-icon></ion-button>
 
 
     <h1>Liste des invités</h1>
