--- a/mobile/src/app/pages/login/login.page.html
+++ b/mobile/src/app/pages/login/login.page.html
@@ -14,6 +14,13 @@
         <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
             <div padding>
+              <br>
+                  <ion-row *ngIf='isNotLogged'>
+                  <div text-center id="register">
+                  Vous n'avez pas rentrer le bon mot de passe ou le bon nom d'utilisateur.
+                  </div>
+                  </ion-row>
+                  <br>
               <ion-item>
                 <ion-input label="Nom d'utilisateur" labelPlacement="floating" name="username" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
               </ion-item>
@@ -34,10 +41,10 @@
           par ici</a>
           </div>
         </ion-row>
-        <br>
       </ion-grid>
     </form>
     
   </ion-card>
+
   
 </ion-content>
