bouton suppressions event v1

--- a/mobile/src/app/tab1/tab1.page.html
+++ b/mobile/src/app/tab1/tab1.page.html
@@ -12,8 +12,7 @@
   </ion-refresher>
     <h1>Mes événements</h1>
 
-    <ion-card *ngFor="let event of tableEvents;index as i" class="ion-text-center" [routerLink]="['/evenement',event?.id]">
-
+    <ion-card *ngFor="let event of tableEvents; index as i" class="ion-text-center" [routerLink]="['/evenement', event?.id]" [ngClass]="{ 'disabled-event': isButtonDisabled }">
       <ion-card-header>
         <ion-card-title>{{ event?.nom }}</ion-card-title>
         <ion-card-subtitle>{{ event?.date }} à {{ event?.heure }}</ion-card-subtitle>
