Début tests end to end

--- a/mobile/src/app/tab2/tab2.page.html
+++ b/mobile/src/app/tab2/tab2.page.html
@@ -12,6 +12,7 @@
   <ion-list>
     <ion-item>
       <ion-input
+        name="Nom"
         label="Nom de l'événement"
         labelPlacement="floating"
         [clearInput]="true"
@@ -36,6 +37,7 @@
 
   <ion-item>
     <ion-input
+        name="Lieu"
         label="Lieu"
         labelPlacement="floating"
         [clearInput]="true"
@@ -47,6 +49,7 @@
 
   <ion-item>
     <ion-input
+        name="nbrLit"
         type="number"
         label="Nombre de lits disponibles"
         labelPlacement="floating"
