Up UNIQUE + message d'erreur connexion

--- a/mobile/src/app/pages/login/login.page.html
+++ b/mobile/src/app/pages/login/login.page.html
@@ -14,6 +14,13 @@
         <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
             <div padding>
+              <br>
+              <ion-row *ngIf='isNotLogged'>
+              <div text-center id="loginError">
+              Nom d'utilisateur ou mot de passe incorrect
+              </div>
+              </ion-row>
+              <br>
               <ion-item>
                 <ion-input label="Nom d'utilisateur" labelPlacement="floating" name="username" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
               </ion-item>
