--- a/mobile/src/app/tab1/tab1.page.scss
+++ b/mobile/src/app/tab1/tab1.page.scss
@@ -39,7 +39,12 @@ h1 {
 }
 
 .disabled-event {
-    opacity: 0.5; /* Réduire l'opacité pour indiquer que l'événement est désactivé */
-    pointer-events: none; /* Désactiver les événements de souris pour empêcher les clics */
-    /* Ajoutez d'autres styles pour indiquer visuellement que l'événement est désactivé */
+    opacity: 0.5;
+    background-color: #D3D3D3;
   }
+
+.disabled-event ion-card-header ion-card-title,
+.disabled-event ion-card-header ion-card-subtitle,
+.disabled-event ion-card-content {
+  color: black;
+}
