Début de la suppression d'un compte utilisateur

--- a/mobile/src/app/components/menu/menu/menu.component.html
+++ b/mobile/src/app/components/menu/menu/menu.component.html
@@ -34,6 +34,12 @@
         </ion-button>
       </ion-item>
 
+      <ion-item>
+        <ion-button expand="full" color="primary" (click)="unsubscribe()">
+          <ion-label color="dark">Supprimer mon compte</ion-label>
+        </ion-button>
+      </ion-item>
+
     </ion-list>
   </ion-content>
 
