Ajout confirmation de supression

--- a/mobile/src/app/components/menu/menu/menu.component.html
+++ b/mobile/src/app/components/menu/menu/menu.component.html
@@ -35,7 +35,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-button expand="full" color="primary" (click)="unsubscribe()">
+        <ion-button expand="full" color="primary" (click)="onClickUnsubscribe()">
           <ion-label color="dark">Supprimer mon compte</ion-label>
         </ion-button>
       </ion-item>
