--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -3,7 +3,7 @@
     <ion-back-button defaultHref="/tabs/tab1" text="" icon="chevron-back-outline"></ion-back-button>
   </ion-buttons>
   <ion-title id="event-name">{{ event?.nom }}</ion-title>
-  <ion-buttons slot="end">
+  <ion-buttons *ngIf="isAdmin" slot="end">
     <ion-button (click)="sShare()"><ion-icon id="shareEventButton" name="share-outline"></ion-icon></ion-button>
   </ion-buttons>
 </ion-toolbar>
@@ -45,7 +45,7 @@
         <ion-card-content>Bobs</ion-card-content>
       </ion-card>
     </ion-row>
-    <ion-row>
+    <ion-row *ngIf="isAdmin">
       <ion-button id="updateEventButton" class="eventActionsButton" [routerLink]="['/update-event',event?.id]" [ngClass]="{ 'disabled-event': event?.etatdelete }">
         <ion-icon aria-hidden="true" name="pencil-outline" style="height: 35px; width:150px; color: black;"></ion-icon>
       </ion-button>
@@ -53,7 +53,7 @@
       <ion-button id="cancelEventButton" class="eventActionsButton" (click)="onClickDelete()" #deleteButton [ngClass]="{ 'disabled-event': event?.etatdelete }">
         <ion-icon aria-hidden="true" name="trash-outline" style="height: 35px; width:150px; color: black;"></ion-icon>
       </ion-button>
-    </ion-row>    
+    </ion-row> 
 
     <h1>Liste des invités</h1>
 
