--- a/mobile/src/app/components/popover/popover.component.scss
+++ b/mobile/src/app/components/popover/popover.component.scss
@@ -10,6 +10,6 @@ ion-item {
   }
 
 .selected ion-label {
-    background-color: #ffbf00; /* Bleu si sélectionné */
-    color: black; /* Texte blanc si sélectionné */
+    background-color: #ffbf00;
+    color: black;
 }
