améliorations css liste des participants

--- a/mobile/src/app/components/evenement/evenement.component.scss
+++ b/mobile/src/app/components/evenement/evenement.component.scss
@@ -47,8 +47,8 @@ ion-row {
     ion-thumbnail {
       width: auto;
       height: auto;
-      margin-left: 250px;
-  
+      margin-left: 270px;
+      padding-right: 20px;
     }
   
     img{
