Test ajout de la photo de profil aux invitées d'un event

--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -57,13 +57,20 @@
 
     <h1>Liste des invités</h1>
 
-  <ion-card *ngFor="let profil of eventprofil; index as i" class="status" [routerLink]="['/profil-event',profil?.idProfil]">
-    <ion-card-header class="card-header" style="float:left">
-      <ion-card-subtitle class="role">{{ profil.status?.status }}</ion-card-subtitle>
-        <ion-card-title class="idProfil">{{ profil.user?.username }}</ion-card-title>
-    </ion-card-header>
-    <ion-thumbnail class="image-container">
-      <img [src]="profil.status?.status ? getImageUrl(profil.status.status) : ''" alt="Photo">
-    </ion-thumbnail>
-  </ion-card>
+    <ion-card *ngFor="let profil of eventprofil; index as i" class="status" [routerLink]="['/profil-event', profil?.idProfil]">
+      <ion-card-header class="card-header">
+        <div class="profile-container">
+          <ion-thumbnail class="profile-image-container">
+            <img src="../../../assets/icon/user.png" alt="Photo" class="profile-image">
+          </ion-thumbnail>
+          <div class="text-container">
+            <ion-card-title class="idProfil">{{ profil.user?.username }}</ion-card-title>
+            <ion-card-subtitle class="role">{{ profil.status?.status }}</ion-card-subtitle>
+          </div>
+        </div>
+      </ion-card-header>
+      <ion-thumbnail class="image-container">
+        <img [src]="profil.status?.status ? getImageUrl(profil.status.status) : ''" alt="Photo">
+      </ion-thumbnail>
+    </ion-card>
 </ion-content>
