--- a/mobile/src/app/components/evenement/evenement.component.scss
+++ b/mobile/src/app/components/evenement/evenement.component.scss
@@ -1,5 +1,5 @@
-ion-card{
-    background-color: #F9E6AC;
+ion-card {
+  background-color: #F9E6AC;
 }
 
 ion-button {
@@ -11,49 +11,82 @@ ion-button {
 }
 
 .flex-container {
-    display: flex;
+  display: flex;
 }
 
 .flex-item {
-    flex: 1;
-    text-align: center; 
+  flex: 1;
+  text-align: center;
 }
 
-#flex-item-1{
-    margin-right: 1%;
+#flex-item-1 {
+  margin-right: 1%;
 }
 
 ion-row {
-    margin-top: 0;
-    margin-bottom: 5%;
-    justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 5%;
+  justify-content: space-between;
 }
 
 .status {
-    ion-card-title,
-    ion-card-subtitle {
-      flex: 1;
-      text-align: left;
-    }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #F9E6AC;
+}
 
-    ion-card-title {
-      font-size: 20px;
-    }
+.profile-container {
+  display: flex;
+  align-items: center;
+}
 
-    ion-card-subtitle {
-      font-size: 15px;
-    }
-  
-    ion-thumbnail {
-      width: auto;
-      height: auto;
-      margin-left: 270px;
-      padding-right: 20px;
-    }
-  
-    img{
-      margin-top: 10px;
-    }
+.profile-image-container {
+  margin-right: 10px;
+}
+
+.profile-image {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+ion-card-title.idProfil, ion-card-subtitle.role {
+  text-align: left;
+}
+
+ion-card-title.idProfil {
+  font-size: 20px;
+  margin: 0;
+}
+
+ion-card-subtitle.role {
+  font-size: 15px;
+  margin: 0;
+}
+
+ion-thumbnail.image-container {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
 ion-toolbar {
@@ -61,10 +94,10 @@ ion-toolbar {
   justify-content: center;
   align-items: center;
   height: 70px;
+}
 
-  ion-title {
-    font-size: 20px;
-  }
+ion-toolbar ion-title {
+  font-size: 20px;
 }
 
 h1 {
@@ -73,16 +106,8 @@ h1 {
   margin-left: 5%;
 }
 
-.ios {
-  h1 {
-      font-size: 30px;
-  }
-}
-
-.md {
-  h1 {
-      font-size: 30px;
-  }
+.ios h1, .md h1 {
+  font-size: 30px;
 }
 
 ion-back-button {
