--- a/mobile/src/app/components/profil-event/profil-event.component.scss
+++ b/mobile/src/app/components/profil-event/profil-event.component.scss
@@ -23,10 +23,6 @@ ion-toolbar {
     justify-content: center;
     align-items: center;
     height: 70px;
-  
-    ion-title {
-      font-size: 20px;
-    }
 }
 
 #title {
@@ -67,4 +63,24 @@ label {
 
 #phoneCall {
     text-decoration: none;
+}
+
+.toolbar-image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.toolbar-image {
+    max-width: 150px;
+    max-height: 150px;
+}
+
+ion-back-button {
+    color: black;
+    width: 80px;
+    height: 65px;
+    margin-right: -80px;
 }
