Amélioration du CSS sur la page event

--- a/mobile/src/app/tab3/tab3.page.scss
+++ b/mobile/src/app/tab3/tab3.page.scss
@@ -9,6 +9,8 @@
 
 ion-card{
     background-color: #F9E6AC;
+    border-radius: 20px;
+    margin-bottom: -10px;
 }
 
 #photoProfil{
@@ -66,9 +68,6 @@ label {
 #flex-item-1 {
     margin-bottom: -7%;
 }
-
-
-
 
 #phoneCall {
     text-decoration: none;
