--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -8,13 +8,13 @@
   </ion-buttons>
 </ion-toolbar>
 
-<ion-content [fullscreen]="true" class="ion-text-center">
+<ion-content [fullscreen]="true">
   <ion-refresher slot="fixed" (ionRefresh)="refreshEventInfos($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
     <h1>Informations générales</h1>
 
-    <ion-card class="ion-text-center" class="eventInfos">
+    <ion-card class="eventInfos">
 
       <ion-card-header>
         <ion-card-title id="date-time">{{ event?.date }} à {{ event?.heure }}</ion-card-title>
@@ -22,7 +22,7 @@
       <ion-card-content>Date et heure</ion-card-content>
     </ion-card>
 
-    <ion-card class="ion-text-center" class="eventInfos">
+    <ion-card class="eventInfos">
 
       <ion-card-header>
         <ion-card-title id="location">{{ event?.lieu }}</ion-card-title>
@@ -31,21 +31,21 @@
     </ion-card>
 
     <ion-row class="flex-container">
-      <ion-card id="flex-item-1" class="ion-text-center flex-item">
+      <ion-card id="flex-item-1" class="flex-item">
         <ion-card-header>
           <ion-card-title id="nbrLit">{{ event?.nbrLit }}</ion-card-title>
         </ion-card-header>
         <ion-card-content>Lits libres</ion-card-content>
       </ion-card>
 
-      <ion-card class="ion-text-center flex-item">
+      <ion-card class="flex-item">
         <ion-card-header>
           <ion-card-title id="nbrBob">{{ event?.nbrBob }}</ion-card-title>
         </ion-card-header>
         <ion-card-content>Bobs</ion-card-content>
       </ion-card>
     </ion-row>
-    <ion-row *ngIf="isAdmin">
+    <ion-row *ngIf="isAdmin" id="actionsButton">
       <ion-button id="updateEventButton" class="eventActionsButton" [routerLink]="['/update-event',event?.id]" [ngClass]="{ 'disabled-event': event?.etatdelete }">
         <ion-icon aria-hidden="true" name="pencil-outline" style="height: 35px; width:150px; color: black;"></ion-icon>
       </ion-button>
@@ -73,4 +73,6 @@
         <img [src]="profil.status?.status ? getImageUrl(profil.status.status) : ''" alt="Photo">
       </ion-thumbnail>
     </ion-card>
+    <br>
+    <br>
 </ion-content>
