--- a/mobile/src/app/components/evenement/evenement.component.scss
+++ b/mobile/src/app/components/evenement/evenement.component.scss
@@ -1,13 +1,22 @@
 ion-card {
   background-color: #F9E6AC;
+  border-radius: 20px;
+}
+
+ion-card-title, ion-card-content {
+  margin-left: 10px;
+}
+
+ion-card-content {
+  margin-top: -10px;
 }
 
 ion-button {
-  margin-top: -5%;
+  margin-top: -20px;
 }
 
 .eventInfos {
-  margin-bottom: -1%;
+  margin-bottom: -8px;
 }
 
 .flex-container {
@@ -16,11 +25,10 @@ ion-button {
 
 .flex-item {
   flex: 1;
-  text-align: center;
 }
 
 #flex-item-1 {
-  margin-right: 1%;
+  margin-right: 0;
 }
 
 ion-row {
@@ -33,8 +41,9 @@ ion-row {
   align-items: center;
   justify-content: space-between;
   background-color: #F9E6AC;
-  margin-bottom: 10px;
+  margin-bottom: -8px;
   padding: -20px;
+  border-radius: 100px;
 }
 
 .profile-container {
@@ -120,15 +129,19 @@ ion-back-button {
 }
 
 .eventActionsButton {
-  width: 150px;
+  width: 172px;
+}
+
+#actionsButton {
+  margin-top: -8px;
 }
 
 #updateEventButton {
-  margin-left: 35px;
+  margin-left: 15px;
 }
 
 #cancelEventButton {
-  margin-right: 35px;
+  margin-right: 15px;
 }
 
 .disabled-event {
