rejoindre événement opérationelle

--- a/mobile/src/app/components/menu/menu/menu.component.html
+++ b/mobile/src/app/components/menu/menu/menu.component.html
@@ -9,6 +9,14 @@
 
   <ion-content class="ion-padding">
     <ion-list>
+
+      <ion-item>
+       
+        <ion-button expand="full" color="primary" [routerLink]="['/rejoindre']">
+          <ion-label color="dark">Rejoindre</ion-label>
+        </ion-button>
+
+      </ion-item>
       
       <ion-item>
         <ion-button expand="full" color="primary">
